<resources>
    <string name="app_name">Convidados</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Luan Treuke</string>
    <string name="nav_header_subtitle">luaneduardotreuk@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="settings_2">Settings 2</string>
    <string name="menu_all_guests">Todos os convidados</string>
    <string name="menu_present">Presentes</string>
    <string name="menu_absent">Ausentes</string>
    <string name="nome">Nome:</string>
    <string name="presente">Você estará presente?</string>
    <string name="estarei_presente">Presente</string>
    <string name="estarei_ausente">Ausente</string>
    <string name="enviar">Enviar</string>
    <string name="levarei">Levarei:</string>
    <string name="comida_bebida">Comida, bebida...</string>
</resources>