<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.GuestFormActivity">

    <TextView
        android:id="@+id/text_name"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:text="@string/nome"
        android:textSize="24sp"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    
    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/text_name"
        app:layout_constraintTop_toBottomOf="@+id/text_name"
        />

    <TextView
        android:id="@+id/text_present"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/presente"
        android:layout_marginStart="12dp"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_name"/>
    
    <RadioGroup
        android:id="@+id/radio_group_presence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_present"
        android:layout_marginStart="12dp">
        
        <RadioButton
            android:id="@+id/radio_present"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estarei_presente"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/text_present"
            app:layout_constraintTop_toBottomOf="@+id/text_present"/>

        <RadioButton
            android:id="@+id/radio_absent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estarei_ausente"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/text_present"
            app:layout_constraintTop_toBottomOf="@+id/radio_present"/>
    </RadioGroup>

    <TextView
        android:id="@+id/text_levarei"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="12dp"
        android:text="Levarei:"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group_presence"/>

    <EditText
        android:id="@+id/edit_text_levarei"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/text_levarei"
        app:layout_constraintTop_toBottomOf="@+id/text_levarei"
        android:hint="Comida, bebida..."
        />


    <Button
        android:id="@+id/button_enviar"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/enviar"
        android:textSize="18sp"
        android:layout_marginTop="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />





</androidx.constraintlayout.widget.ConstraintLayout>